--- a/Day 1 JavaScript Drum Kit/style.css
+++ b/Day 1 JavaScript Drum Kit/style.css
@@ -28,7 +28,7 @@ html {
     transition: all .07s ease;
     width: 10rem;
     text-align: center;
-    color: white;
+    color: rgb(255, 255, 255);
     background: rgba(0, 0, 0, 0.4);
     text-shadow: 0 0 .5rem black;
 }
